Fix footer on small screens

--- a/app/scss/shared.scss
+++ b/app/scss/shared.scss
@@ -588,10 +588,11 @@ button.cancel-button {
 .site-footer {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 1rem;
     background-color: var(--primary-background-color);
-    padding: .3rem .6rem;
-    width: max-content;
+    padding: .5rem .7rem;
+    line-height: 1;
     border: 1px solid var(--primary-border-color);
     border-bottom: none;
     font-size: .75rem;
@@ -688,7 +689,8 @@ button.cancel-button {
 @media screen and (max-width: 1260px) {
 
     .site-header,
-    .content-wrap {
+    .content-wrap,
+    .site-footer-wrap {
         margin: 0 var(--content-padding);
     }
 }
@@ -745,5 +747,9 @@ button.cancel-button {
 
     button.search-button-mobile {
         display: flex;
+    }
+
+    .site-footer {
+        flex-wrap: wrap;
     }
 }
